fix : stream.distinct를 이용한 중복제거